cluster/apps/weather/openweathermap-exporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openweathermap-exporter
  name: openweathermap-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openweathermap-exporter
  template:
    metadata:
      labels:
        app: openweathermap-exporter
    spec:
      containers:
      - name: openweathermap-exporter
        image: ${PRIVATE_REGISTRY_1}/haraldkoch/ows:latest
        ports:
        - containerPort: 2112
