cluster/apps/weather/openweathermap-exporter/service-ipv6.yaml
apiVersion: v1
kind: Service
metadata:
  name: openweathermap-exporter-v6
  namespace: weather
  labels:
    app.kubernetes.io/instance: openweathermap-exporter
    app.kubernetes.io/name: openweathermap-exporter
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "exporters.${SECRET_INTERNAL_DOMAIN}"
    metallb.universe.tf/allow-shared-ip: exporters
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  ports:
    - name: metrics
      port: 2112
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/instance: openweathermap-exporter
    app.kubernetes.io/name: openweathermap-exporter
