cluster/apps/weather/openweathermap-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openweathermap-exporter
  namespace: weather
  labels:
    app: openweathermap-exporter
spec:
  ports:
  - name: openweathermap-exporter
    port: 2112
    targetPort: 2112
    protocol: TCP
  selector:
    app: openweathermap-exporter
