cluster/apps/weather/openweathermap-exporter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openweathermap-exporter
  namespace: weather
  labels:
    app: openweathermap-exporter
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Trafik's PathPrefixStrip is so much easier and more intuitive.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: weather.${SECRET_DOMAIN}
    http:
      paths:
      - path: /openweathermap-exporter(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: openweathermap-exporter
            port:
              number: 2112
